# organizations-catalog-fastapi-sqlalchemy-pydantic-alembic

./: .env  Dockerfile  alembic.ini  compose.yaml  pyproject.toml
app/: auth.py  config.py  main.py
app/api/v1/: activity_routes.py  auth_routes.py  building_routes.py  organization_routes.py
app/core/: config.py
app/db/: base.py  session.py
app/domains/activity/: models.py  repository.py  schemas.py  service.py
app/domains/building/: models.py  repository.py  service.py
app/domains/organization/: models.py  repository.py  schemas.py  service.py
app/middleware/: api_key.py
app/tests/: test_activities.py  test_buildings.py  test_organizations.py
